--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 body {
-  /*
-  background-image: url(./assets/bg-mobile-dark.jpg); /* adicionar imagem */
   background-repeat: no-repeat; /* Não repitir imagem adicionada*/
   background-position: top center; /* Posiciona a imgem para iniciar do y para o x */
   background-size: cover; /* Cobrir espaçao visivel a tela em mobile */
-
-  /* backgroud: color image repet position/size 
-  ____________Atalho para todas as propriedas*/
   background: var(--bg-url) no-repeat top center/cover;
 }
 
@@ -73,12 +68,11 @@ body * {
 }
 
 #switch button {
-  width: 32px; /*largura*/
+  width: 32px;
   height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-
   position: absolute;
   top: 50%;
   left: 0;
@@ -102,7 +96,7 @@ body * {
   border-radius: 9999px;
 }
 
-/* Links - Listas */
+/* Links */
 
 ul {
   list-style: none;
@@ -143,9 +137,7 @@ ul li a:hover {
 #social-links {
   display: flex;
   justify-content: center;
-
   padding: 24px 0;
-
   font-size: 24px;
 }
 
@@ -154,16 +146,9 @@ ul li a:hover {
   align-items: center;
   justify-content: center;
   padding: 16px;
-
   transition: background 0.2s;
   border-radius: 50%;
 }
-/* Hover serve para quando passar o mouse em cima gerar um efeito de trasição nos links das redes socias
- */
-#social-links a:hover {
-  background: var(--highligt-color);
-}
-
 footer {
   padding: 24px 0;
   text-align: center;
